git-svn-id: http://ikube.googlecode.com/svn/trunk@164 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/data/spring.properties
+++ b/modules/core/src/test/resources/data/spring.properties
@@ -1,3 +1,19 @@
+jdbc.batch.size=100
+internet.batch.size=10
+url=http://www.ikokoon.eu/ikokoon/index.html
+files.path=./modules/core/src/test/resources/data
+faq.predicate=where faq.faqid > 0
+throttle=100
+
+max.age=36000000
+buffer.size=128
+compound.file=true
+merge.factor=10
+buffered.docs=10
+max.field.length=10000
+max.read.length=10000000
+index.directory.path=./index
+
 #General JDBC settings
 jdbc.minPoolSize=5
 jdbc.maxPoolSize=10
@@ -11,8 +27,8 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://localhost:50000/billion
-jdbc.database=billion
+jdbc.url=jdbc:db2://localhost:50000/ikube
+jdbc.database=ikube
 jdbc.port=50000
 jdbc.server=localhost
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
