--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -56,7 +56,10 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<forkMode>once</forkMode>
-					<!-- argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine -->
+					<!--<argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>-->
+					<excludes>
+						<exclude>**/TextParserTest.java</exclude>
+					</excludes>
 				</configuration>
 			</plugin>
 		</plugins>
