--- a/modules/core/src/test/resources/data/spring.properties
+++ b/modules/core/src/test/resources/data/spring.properties
@@ -16,10 +16,10 @@ index.directory.path=./index
 
 #General JDBC settings
 jdbc.minPoolSize=5
-jdbc.maxPoolSize=10
+jdbc.maxPoolSize=100
 jdbc.maxStatements=1000
-jdbc.checkOutTimeout=360000000
-jdbc.numHelperThreads=3
+jdbc.checkOutTimeout=10000
+jdbc.numHelperThreads=10
 
 #DB2 database
 jdbc.name=DB2
@@ -27,10 +27,10 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://localhost:50000/ikube
-jdbc.database=ikube
+jdbc.url=jdbc:db2://ikube:50000/billion
+jdbc.database=billion
 jdbc.port=50000
-jdbc.server=localhost
+jdbc.server=ikube
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
 
