git-svn-id: http://ikube.googlecode.com/svn/trunk@175 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -12,12 +12,12 @@ web.service.delay=10000
 web.service.period=10000
 
 # The batch size for fetching records from the database
-jdbc.batch.size=10000
+jdbc.batch.size=1000
 internet.batch.size=10
 
 # The number of threads for each indexing component
-table.handler.threads=1
-internet.handler.threads=1
+table.handler.threads=5
+internet.handler.threads=5
 filesystem.handler.threads=1
 email.handler.threads=1
 
@@ -33,7 +33,7 @@ throttle=0
 url=http://www.ikokoon.eu/ikokoon/index.html
 
 # Lucene properties:
-buffer.size=256
+buffer.size=128
 compound.file=true
 merge.factor=10000
 buffered.docs=10000
@@ -41,7 +41,7 @@ max.field.length=100000
 max.read.length=1000000
 
 # The path for the index
-index.directory.path=./index
+index.directory.path=//Ikube/d/index
 
 #General JDBC settings
 jdbc.minPoolSize=10
@@ -56,9 +56,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://localhost:50000/billion
+jdbc.url=jdbc:db2://ikube:50000/billion
 jdbc.database=billion
 jdbc.port=50000
-jdbc.server=localhost
+jdbc.server=ikube
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
