git-svn-id: http://ikube.googlecode.com/svn/trunk@176 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -33,15 +33,15 @@ throttle=0
 url=http://www.ikokoon.eu/ikokoon/index.html
 
 # Lucene properties:
-buffer.size=128
+buffer.size=256
 compound.file=true
-merge.factor=10000
-buffered.docs=10000
+merge.factor=1000
+buffered.docs=1000
 max.field.length=100000
 max.read.length=1000000
 
 # The path for the index
-index.directory.path=//Ikube/d/index
+index.directory.path=//Ikube/d/Temp/index
 
 #General JDBC settings
 jdbc.minPoolSize=10
