git-svn-id: http://ikube.googlecode.com/svn/trunk@178 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -41,7 +41,7 @@ max.field.length=100000
 max.read.length=1000000
 
 # The path for the index
-index.directory.path=//Ikube/d/Temp/index
+index.directory.path=./index
 
 #General JDBC settings
 jdbc.minPoolSize=10
@@ -56,9 +56,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://ikube:50000/billion
-jdbc.database=billion
+jdbc.url=jdbc:db2://localhost:50000/ikube
+jdbc.database=ikube
 jdbc.port=50000
-jdbc.server=ikube
+jdbc.server=localhost
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
