git-svn-id: http://ikube.googlecode.com/svn/trunk@182 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -40,8 +40,11 @@ buffered.docs=1000
 max.field.length=100000
 max.read.length=1000000
 
-# The path for the index
+# The path for the index(s)
 index.directory.path=./index
+index.directory.path.one=${index.directory.path}/one
+index.directory.path.two=${index.directory.path}/two
+index.directory.path.three=${index.directory.path}/three
 
 #General JDBC settings
 jdbc.minPoolSize=10
