git-svn-id: http://ikube.googlecode.com/svn/trunk@183 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -3,35 +3,21 @@ delay=600000
 period=600000
 max.age=36000000
 
-lock.manager.delay=1000
-lock.manager.period=100
-
-dead.lock.delay=3600000
-dead.lock.period=3600000
-
 #Eventually we want to set this to about 10 milliseconds and
 #verify that the open close and index actions do not interrupt
 #the search operations and clients
 web.service.delay=3600000
 web.service.period=3600000
 
-profiling.delay=3600000
-profiling.period=3600000
-
-throttle=100
-
+throttle=0
 url=http://www.ikokoon.eu/ikokoon/index.html
-
-jdbc.batch.size=100
+jdbc.batch.size=10
 internet.batch.size=10
-
-table.handler.threads=1
+table.handler.threads=3
 internet.handler.threads=3
 filesystem.handler.threads=1
 email.handler.threads=1
-
 files.path=./modules/core/src/test/resources/data
-
 faq.predicate=where faq.faqid > 0
 
 buffer.size=128
@@ -41,13 +27,16 @@ buffered.docs=10
 max.field.length=10000
 max.read.length=10000000
 index.directory.path=./index
+index.directory.path.one=${index.directory.path}/one
+index.directory.path.two=${index.directory.path}/two
+index.directory.path.three=${index.directory.path}/three
 
 #General JDBC settings
 jdbc.minPoolSize=3
-jdbc.maxPoolSize=25
-jdbc.maxStatements=100
+jdbc.maxPoolSize=10
+jdbc.maxStatements=1000
 jdbc.checkOutTimeout=360000000
-jdbc.numHelperThreads=3
+jdbc.numHelperThreads=5
 
 #H2 database
 jdbc.user=sa
