--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -1,6 +1,6 @@
 #Configuration details for individual instances
-delay=600000
-period=600000
+delay=6000000
+period=6000000
 max.age=36000000
 
 #Eventually we want to set this to about 10 milliseconds and
@@ -13,8 +13,8 @@ throttle=0
 url=http://www.ikokoon.eu/ikokoon/index.html
 jdbc.batch.size=10
 internet.batch.size=10
-table.handler.threads=3
-internet.handler.threads=3
+table.handler.threads=1
+internet.handler.threads=10
 filesystem.handler.threads=1
 email.handler.threads=1
 files.path=./modules/core/src/test/resources/data
@@ -32,8 +32,8 @@ index.directory.path.two=${index.directory.path}/two
 index.directory.path.three=${index.directory.path}/three
 
 #General JDBC settings
-jdbc.minPoolSize=3
-jdbc.maxPoolSize=10
+jdbc.minPoolSize=10
+jdbc.maxPoolSize=100
 jdbc.maxStatements=1000
 jdbc.checkOutTimeout=360000000
 jdbc.numHelperThreads=5
