--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -8,15 +8,15 @@ max.age=36000000
 #Eventually we want to set this to about 10 milliseconds and
 #verify that the open close and index actions do not interrupt
 #the search operations and clients
-web.service.delay=10000
-web.service.period=10000
+web.service.delay=60000
+web.service.period=60000
 
 # The batch size for fetching records from the database
 jdbc.batch.size=10000
 internet.batch.size=10
 
 # The number of threads for each indexing component
-table.handler.threads=5
+table.handler.threads=1
 internet.handler.threads=5
 filesystem.handler.threads=1
 email.handler.threads=1
@@ -25,7 +25,7 @@ email.handler.threads=1
 files.path=./modules/core/src/test/resources/data
 
 # To limit the results
-faq.predicate=where faq.faqid < 1000000000
+faq.predicate=where faq.faqid < 10000
 
 # The time delay between reads in the crawler
 throttle=0
