git-svn-id: http://ikube.googlecode.com/svn/trunk@188 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/data/spring.properties
+++ b/modules/core/src/test/resources/data/spring.properties
@@ -13,6 +13,9 @@ buffered.docs=10
 max.field.length=10000
 max.read.length=10000000
 index.directory.path=./index
+index.directory.path.one=${index.directory.path}/one
+index.directory.path.two=${index.directory.path}/two
+index.directory.path.three=${index.directory.path}/three
 
 #General JDBC settings
 jdbc.minPoolSize=5
