--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -10,13 +10,14 @@ max.age=36000000
 #the search operations and clients
 web.service.delay=60000
 web.service.period=60000
+web.service.url=http://192.168.0.101:8081/service/ISearcherWebService
 
 # The batch size for fetching records from the database
 jdbc.batch.size=10000
 internet.batch.size=10
 
 # The number of threads for each indexing component
-table.handler.threads=1
+table.handler.threads=10
 internet.handler.threads=5
 filesystem.handler.threads=1
 email.handler.threads=1
@@ -25,7 +26,7 @@ email.handler.threads=1
 files.path=./modules/core/src/test/resources/data
 
 # To limit the results
-faq.predicate=where faq.faqid < 10000
+faq.predicate=where faq.faqid < 1000000
 
 # The time delay between reads in the crawler
 throttle=0
