git-svn-id: http://ikube.googlecode.com/svn/trunk@191 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -10,15 +10,15 @@ max.age=36000000
 #the search operations and clients
 web.service.delay=60000
 web.service.period=60000
-web.service.url=http://192.168.0.101:8081/service/ISearcherWebService
+web.service.url=http://localhost:8081/service/ISearcherWebService
 
 # The batch size for fetching records from the database
-jdbc.batch.size=10000
+jdbc.batch.size=10
 internet.batch.size=10
 
 # The number of threads for each indexing component
-table.handler.threads=10
-internet.handler.threads=5
+table.handler.threads=1
+internet.handler.threads=1
 filesystem.handler.threads=1
 email.handler.threads=1
 
@@ -26,20 +26,20 @@ email.handler.threads=1
 files.path=./modules/core/src/test/resources/data
 
 # To limit the results
-faq.predicate=where faq.faqid < 1000000
+faq.predicate=where faq.faqid < 10000
 
 # The time delay between reads in the crawler
-throttle=0
+throttle=100
 # The first seed url for internet crawling
 url=http://www.ikokoon.eu/ikokoon/index.html
 
 # Lucene properties:
-buffer.size=256
+buffer.size=64
 compound.file=true
-merge.factor=1000
-buffered.docs=1000
-max.field.length=100000
-max.read.length=1000000
+merge.factor=10
+buffered.docs=10
+max.field.length=1000
+max.read.length=10000
 
 # The path for the index(s)
 index.directory.path=./index
