git-svn-id: http://ikube.googlecode.com/svn/trunk@193 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.properties
+++ b/build.properties
@@ -20,3 +20,9 @@ tomcat.1.bin=${tomcat.1}/bin
 tomcat.2.bin=${tomcat.2}/bin
 tomcat.3.bin=${tomcat.3}/bin
 tomcat.ikube.bin=${tomcat.ikube}/bin
+
+tomcat.vm.one=//One/c/apache-tomcat-6.0.29
+
+tomcat.vm.one.webapps=${tomcat.vm.one}/webapps
+
+tomcat.vm.one.bin=${tomcat.vm.one}/bin
