--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -13,7 +13,7 @@ web.service.period=60000
 web.service.url=http://localhost:8081/service/ISearcherWebService
 
 # The batch size for fetching records from the database
-jdbc.batch.size=10
+jdbc.batch.size=10000
 internet.batch.size=10
 
 # The number of threads for each indexing component
@@ -26,23 +26,23 @@ email.handler.threads=1
 files.path=./modules/core/src/test/resources/data
 
 # To limit the results
-faq.predicate=where faq.faqid < 10000
+faq.predicate=where faq.faqid < 10000000
 
 # The time delay between reads in the crawler
-throttle=100
+throttle=0
 # The first seed url for internet crawling
 url=http://www.ikokoon.eu/ikokoon/index.html
 
 # Lucene properties:
-buffer.size=64
+buffer.size=256
 compound.file=true
-merge.factor=10
-buffered.docs=10
-max.field.length=1000
-max.read.length=10000
+merge.factor=1000
+buffered.docs=1000
+max.field.length=10000
+max.read.length=1000000
 
 # The path for the index(s)
-index.directory.path=./index
+index.directory.path=//Ikube/d/index
 index.directory.path.one=${index.directory.path}/one
 index.directory.path.two=${index.directory.path}/two
 index.directory.path.three=${index.directory.path}/three
@@ -60,7 +60,7 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://localhost:50000/ikube
+jdbc.url=jdbc:db2://ikube:50000/ikube
 jdbc.database=ikube
 jdbc.port=50000
 jdbc.server=localhost
