--- a/build.xml
+++ b/build.xml
@@ -8,6 +8,7 @@
 		<delete dir="${tomcat.1.webapps}/${ikube.dir}" failonerror="true" />
 		<delete dir="${tomcat.2.webapps}/${ikube.dir}" failonerror="true" />
 		<delete dir="${tomcat.3.webapps}/${ikube.dir}" failonerror="true" />
+		<delete dir="${tomcat.vm.one.webapps}/${ikube.dir}" failonerror="true" />
 		<!-- delete dir="${tomcat.ikube.webapps}/${ikube.dir}" failonerror="true" / -->
 
 		<delete dir="${cluster.directory}/index" failonerror="true" />
@@ -22,12 +23,15 @@
 		<delete file="${tomcat.1.webapps}/${ikube.war}" failonerror="true" />
 		<delete file="${tomcat.2.webapps}/${ikube.war}" failonerror="true" />
 		<delete file="${tomcat.3.webapps}/${ikube.war}" failonerror="true" />
+		<delete file="${tomcat.vm.one.webapps}/${ikube.war}" failonerror="true" />
 		<!-- delete file="${tomcat.ikube.webapps}/${ikube.war}" failonerror="true" / -->
 
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.1.webapps}" overwrite="true" failonerror="true" />
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.2.webapps}" overwrite="true" failonerror="true" />
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.3.webapps}" overwrite="true" failonerror="true" />
+		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.vm.one.webapps}" overwrite="true" failonerror="true" />
 		<!-- copy file="${target.directory}/${ikube.war}" todir="${tomcat.ikube.webapps}" overwrite="true" failonerror="true" / -->
+		
 	</target>
 	
 	<target name="cluster">
