git-svn-id: http://ikube.googlecode.com/svn/trunk@194 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -10,7 +10,11 @@ max.age=36000000
 #the search operations and clients
 web.service.delay=60000
 web.service.period=60000
-web.service.url=http://localhost:8081/service/ISearcherWebService
+
+web.service.protocol=http
+web.service.host=localhost
+web.service.port=8081
+web.service.path=/service/ISearcherWebService
 
 # The batch size for fetching records from the database
 jdbc.batch.size=10000
