--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -9,6 +9,11 @@ max.age=36000000
 web.service.delay=3600000
 web.service.period=3600000
 
+web.service.protocol=http
+web.service.host=localhost
+web.service.port=8081
+web.service.path=/service/ISearcherWebService
+
 throttle=0
 url=http://www.ikokoon.eu/ikokoon/index.html
 jdbc.batch.size=10
