--- a/build.properties
+++ b/build.properties
@@ -6,6 +6,8 @@ target.directory=modules/war/target
 
 cluster.directory=D:/cluster
 
+indexes.directory=D:/cluster/indexes
+
 tomcat.1=${cluster.directory}/apache-tomcat-6.0.29-1
 tomcat.2=${cluster.directory}/apache-tomcat-6.0.29-2
 tomcat.3=${cluster.directory}/apache-tomcat-6.0.29-3
