git-svn-id: http://ikube.googlecode.com/svn/trunk@197 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -30,7 +30,7 @@ email.handler.threads=1
 files.path=./modules/core/src/test/resources/data
 
 # To limit the results
-faq.predicate=where faq.faqid < 10000000
+faq.predicate=where faq.faqid < 100000
 
 # The time delay between reads in the crawler
 throttle=0
