--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -21,8 +21,8 @@ jdbc.batch.size=10000
 internet.batch.size=10
 
 # The number of threads for each indexing component
-table.handler.threads=1
-internet.handler.threads=1
+table.handler.threads=10
+internet.handler.threads=10
 filesystem.handler.threads=1
 email.handler.threads=1
 
@@ -30,7 +30,7 @@ email.handler.threads=1
 files.path=./modules/core/src/test/resources/data
 
 # To limit the results
-faq.predicate=where faq.faqid < 100000
+faq.predicate=where faq.faqid < 1000000
 
 # The time delay between reads in the crawler
 throttle=0
@@ -46,7 +46,7 @@ max.field.length=10000
 max.read.length=1000000
 
 # The path for the index(s)
-index.directory.path=//Ikube/d/index
+index.directory.path=./indexes
 index.directory.path.one=${index.directory.path}/one
 index.directory.path.two=${index.directory.path}/two
 index.directory.path.three=${index.directory.path}/three
