git-svn-id: http://ikube.googlecode.com/svn/trunk@200 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -11,6 +11,9 @@ max.age=36000000
 web.service.delay=60000
 web.service.period=60000
 
+synchronisation.delay=10000
+synchronisation.period=10000
+
 web.service.protocol=http
 web.service.host=localhost
 web.service.port=8081
