--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -9,6 +9,9 @@ max.age=36000000
 web.service.delay=3600000
 web.service.period=3600000
 
+synchronisation.delay=10000
+synchronisation.period=10000
+
 web.service.protocol=http
 web.service.host=localhost
 web.service.port=8081
