git-svn-id: http://ikube.googlecode.com/svn/trunk@206 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -28,7 +28,7 @@ internet.handler.threads=10
 filesystem.handler.threads=1
 email.handler.threads=1
 files.path=./modules/core/src/test/resources/data
-faq.predicate=where faq.faqid < 1000000
+faq.predicate=where faq.faqid > 0
 
 buffer.size=128
 compound.file=true
