git-svn-id: http://ikube.googlecode.com/svn/trunk@208 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.properties
+++ b/build.properties
@@ -8,16 +8,19 @@ cluster.directory=D:/cluster
 
 indexes.directory=D:/cluster/indexes
 
+tomcat=D:/apache-tomcat-6.0.26
 tomcat.1=${cluster.directory}/apache-tomcat-6.0.29-1
 tomcat.2=${cluster.directory}/apache-tomcat-6.0.29-2
 tomcat.3=${cluster.directory}/apache-tomcat-6.0.29-3
 tomcat.ikube=Z:\apache-tomcat-6.0.26
 
+tomcat.webapps=${tomcat}/webapps
 tomcat.1.webapps=${tomcat.1}/webapps
 tomcat.2.webapps=${tomcat.2}/webapps
 tomcat.3.webapps=${tomcat.3}/webapps
 tomcat.ikube.webapps=${tomcat.ikube}/webapps
 
+tomcat.bin=${tomcat}/bin
 tomcat.1.bin=${tomcat.1}/bin
 tomcat.2.bin=${tomcat.2}/bin
 tomcat.3.bin=${tomcat.3}/bin
