--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -3,7 +3,7 @@ delay=10000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the indexes
-max.age=36000000
+max.age=600000
 
 #Eventually we want to set this to about 10 milliseconds and
 #verify that the open close and index actions do not interrupt
@@ -33,7 +33,7 @@ email.handler.threads=1
 files.path=./modules/core/src/test/resources/data
 
 # To limit the results
-faq.predicate=where faq.faqid < 100000
+faq.predicate=where faq.faqid < 1000000
 
 # The time delay between reads in the crawler
 throttle=0
