--- a/build.xml
+++ b/build.xml
@@ -8,6 +8,7 @@
 	<target name="deploy.war">
 		<delete dir="${indexes.directory}" failonerror="false" />
 		
+		<delete dir="${tomcat.webapps}/${ikube.dir}" failonerror="true" />
 		<delete dir="${tomcat.1.webapps}/${ikube.dir}" failonerror="true" />
 		<delete dir="${tomcat.2.webapps}/${ikube.dir}" failonerror="true" />
 		<delete dir="${tomcat.3.webapps}/${ikube.dir}" failonerror="true" />
@@ -18,17 +19,20 @@
 		<delete file="${cluster.directory}/ikube.log" failonerror="true" />
 		<delete file="${cluster.directory}/ikube.odb" failonerror="true" />
 		
+		<delete dir="${tomcat.bin}/${indexes}" failonerror="true" />
 		<delete dir="${tomcat.1.bin}/${indexes}" failonerror="true" />
 		<delete dir="${tomcat.2.bin}/${indexes}" failonerror="true" />
 		<delete dir="${tomcat.3.bin}/${indexes}" failonerror="true" />
 		<delete file="${tomcat.vm.one.bin}/${indexes}" failonerror="false" />
 
+		<delete file="${tomcat.webapps}/${ikube.war}" failonerror="true" />
 		<delete file="${tomcat.1.webapps}/${ikube.war}" failonerror="true" />
 		<delete file="${tomcat.2.webapps}/${ikube.war}" failonerror="true" />
 		<delete file="${tomcat.3.webapps}/${ikube.war}" failonerror="true" />
 		<delete file="${tomcat.vm.one.webapps}/${ikube.war}" failonerror="false" />
 		<!-- delete file="${tomcat.ikube.webapps}/${ikube.war}" failonerror="true" / -->
 
+		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.webapps}" overwrite="true" failonerror="true" />
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.1.webapps}" overwrite="true" failonerror="true" />
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.2.webapps}" overwrite="true" failonerror="true" />
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.3.webapps}" overwrite="true" failonerror="true" />
