--- a/build.properties
+++ b/build.properties
@@ -6,13 +6,10 @@ target.directory=modules/war/target
 
 cluster.directory=D:/cluster
 
-indexes.directory=D:/cluster/indexes
-
 tomcat=D:/apache-tomcat-6.0.26
 tomcat.1=${cluster.directory}/apache-tomcat-6.0.29-1
 tomcat.2=${cluster.directory}/apache-tomcat-6.0.29-2
 tomcat.3=${cluster.directory}/apache-tomcat-6.0.29-3
-tomcat.ikube=Z:\apache-tomcat-6.0.26
 
 tomcat.webapps=${tomcat}/webapps
 tomcat.1.webapps=${tomcat.1}/webapps
@@ -27,7 +24,24 @@ tomcat.3.bin=${tomcat.3}/bin
 tomcat.ikube.bin=${tomcat.ikube}/bin
 
 tomcat.vm.one=//One/c/apache-tomcat-6.0.29
-
 tomcat.vm.one.webapps=${tomcat.vm.one}/webapps
-
 tomcat.vm.one.bin=${tomcat.vm.one}/bin
+
+tomcat.ikube=//Ikube/d/apache-tomcat-6.0.26
+tomcat.ikube.webapps=${tomcat.ikube}/webapps
+tomcat.ikube.bin=${tomcat.ikube}/bin
+
+tomcat.ikube.cluster=//Ikube/d/cluster
+
+tomcat.ikube.cluster.one=${tomcat.ikube.cluster}/apache-tomcat-6.0.29-1
+tomcat.ikube.cluster.two=${tomcat.ikube.cluster}/apache-tomcat-6.0.29-2
+tomcat.ikube.cluster.three=${tomcat.ikube.cluster}/apache-tomcat-6.0.29-3
+
+tomcat.ikube.cluster.one.bin=${tomcat.ikube.cluster.one}/bin
+tomcat.ikube.cluster.two.bin={tomcat.ikube.cluster.two}/bin
+tomcat.ikube.cluster.three.bin={tomcat.ikube.cluster.three}/bin
+
+tomcat.ikube.cluster.one.webapps=${tomcat.ikube.cluster.one}/webapps
+tomcat.ikube.cluster.two.webapps=${tomcat.ikube.cluster.two}/webapps
+tomcat.ikube.cluster.three.webapps=${tomcat.ikube.cluster.three}/webapps
+
