--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -67,7 +67,7 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://ikube:50000/ikube
+jdbc.url=jdbc:db2://localhost:50000/ikube
 jdbc.database=ikube
 jdbc.port=50000
 jdbc.server=localhost
