git-svn-id: http://ikube.googlecode.com/svn/trunk@212 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.properties
+++ b/build.properties
@@ -3,6 +3,7 @@ project.name=ikube
 project.version=1.0
 
 target.directory=modules/war/target
+core.target.directory=modules/core/target
 
 cluster.directory=D:/cluster
 
@@ -44,4 +45,6 @@ tomcat.ikube.cluster.three.bin={tomcat.ikube.cluster.three}/bin
 tomcat.ikube.cluster.one.webapps=${tomcat.ikube.cluster.one}/webapps
 tomcat.ikube.cluster.two.webapps=${tomcat.ikube.cluster.two}/webapps
 tomcat.ikube.cluster.three.webapps=${tomcat.ikube.cluster.three}/webapps
+
+ikube.client.libs=../ikube-client/libs
 
