--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -3,7 +3,7 @@ delay=10000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the indexes
-max.age=600000
+max.age=3600000
 
 #Eventually we want to set this to about 10 milliseconds and
 #verify that the open close and index actions do not interrupt
@@ -14,10 +14,11 @@ web.service.period=60000
 synchronisation.delay=10000
 synchronisation.period=10000
 
-web.service.protocol=http
-web.service.host=localhost
-web.service.port=8081
+service.protocol=http
+service.port=8081
+monitoring.service.port=8090
 web.service.path=/service/ISearcherWebService
+monitoring.service.path=/service/IMonitoringService
 
 # The batch size for fetching records from the database
 jdbc.batch.size=10000
@@ -33,7 +34,7 @@ email.handler.threads=1
 files.path=./modules/core/src/test/resources/data
 
 # To limit the results
-faq.predicate=where faq.faqid < 1000000
+faq.predicate=where faq.faqid < 100000
 
 # The time delay between reads in the crawler
 throttle=0
