--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -17,8 +17,8 @@ synchronisation.period=10000
 service.protocol=http
 service.port=8081
 monitoring.service.port=8090
-web.service.path=/service/ISearcherWebService
-monitoring.service.path=/service/IMonitoringService
+web.service.path=/service/ISearcherWebService?wsdl
+monitoring.service.path=/service/IMonitoringService?wsdl
 
 # The batch size for fetching records from the database
 jdbc.batch.size=10000
