--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -12,9 +12,10 @@ web.service.period=3600000
 synchronisation.delay=10000
 synchronisation.period=10000
 
-web.service.protocol=http
-web.service.port=8081
-web.service.path=/service/ISearcherWebService
+service.protocol=http
+service.port=8081
+web.service.path=/service/ISearcherWebService?wsdl
+monitoring.service.path=/service/IMonitoringService?wsdl
 
 throttle=0
 # http://www.ikokoon.eu/ikokoon/index.html
