--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -5,9 +5,9 @@ period=60000
 # The maximum age of the indexes
 max.age=3600000
 
-#Eventually we want to set this to about 10 milliseconds and
-#verify that the open close and index actions do not interrupt
-#the search operations and clients
+# Eventually we want to set this to about 10 milliseconds and
+# verify that the open close and index actions do not interrupt
+# the search operations and clients
 web.service.delay=60000
 web.service.period=60000
 
@@ -25,8 +25,8 @@ jdbc.batch.size=10000
 internet.batch.size=10
 
 # The number of threads for each indexing component
-table.handler.threads=1
-internet.handler.threads=1
+table.handler.threads=3
+internet.handler.threads=3
 filesystem.handler.threads=1
 email.handler.threads=1
 
@@ -34,7 +34,7 @@ email.handler.threads=1
 files.path=./modules/core/src/test/resources/data
 
 # To limit the results
-faq.predicate=where faq.faqid < 100000
+faq.predicate=where faq.faqid < 100000000
 
 # The time delay between reads in the crawler
 throttle=0
@@ -55,14 +55,14 @@ index.directory.path.one=${index.directory.path}/one
 index.directory.path.two=${index.directory.path}/two
 index.directory.path.three=${index.directory.path}/three
 
-#General JDBC settings
+# General JDBC settings
 jdbc.minPoolSize=10
 jdbc.maxPoolSize=100
 jdbc.maxStatements=1000
 jdbc.checkOutTimeout=360000000
 jdbc.numHelperThreads=5
 
-#DB2 database
+# DB2 database
 jdbc.name=DB2
 jdbc.driver.type=4
 jdbc.user=db2admin
