--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -25,8 +25,8 @@ jdbc.batch.size=10000
 internet.batch.size=10
 
 # The number of threads for each indexing component
-table.handler.threads=3
-internet.handler.threads=3
+table.handler.threads=1
+internet.handler.threads=1
 filesystem.handler.threads=1
 email.handler.threads=1
 
@@ -34,7 +34,7 @@ email.handler.threads=1
 files.path=./modules/core/src/test/resources/data
 
 # To limit the results
-faq.predicate=where faq.faqid < 100000000
+faq.predicate=where faq.faqid < 100000
 
 # The time delay between reads in the crawler
 throttle=0
