git-svn-id: http://ikube.googlecode.com/svn/trunk@218 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -3,7 +3,7 @@ delay=10000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the indexes
-max.age=3600000
+max.age=180000000
 
 # Eventually we want to set this to about 10 milliseconds and
 # verify that the open close and index actions do not interrupt
@@ -13,6 +13,10 @@ web.service.period=60000
 
 synchronisation.delay=10000
 synchronisation.period=10000
+
+analyzed=true
+stored=true
+vectored=true
 
 service.protocol=http
 service.port=8081
@@ -25,7 +29,7 @@ jdbc.batch.size=10000
 internet.batch.size=10
 
 # The number of threads for each indexing component
-table.handler.threads=1
+table.handler.threads=3
 internet.handler.threads=1
 filesystem.handler.threads=1
 email.handler.threads=1
@@ -34,7 +38,7 @@ email.handler.threads=1
 files.path=./modules/core/src/test/resources/data
 
 # To limit the results
-faq.predicate=where faq.faqid < 100000
+faq.predicate=where faq.faqid < 100000000
 
 # The time delay between reads in the crawler
 throttle=0
