git-svn-id: http://ikube.googlecode.com/svn/trunk@222 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -30,7 +30,7 @@ internet.batch.size=10
 
 # The number of threads for each indexing component
 table.handler.threads=3
-internet.handler.threads=1
+internet.handler.threads=5
 filesystem.handler.threads=1
 email.handler.threads=1
 
@@ -43,7 +43,8 @@ faq.predicate=where faq.faqid < 100000000
 # The time delay between reads in the crawler
 throttle=0
 # The first seed url for internet crawling
-url=http://www.ikokoon.eu/ikokoon/index.html
+# http://www.ikokoon.eu/ikokoon/index.html
+url=http://www.oki.com/
 
 # Lucene properties:
 buffer.size=256
