git-svn-id: http://ikube.googlecode.com/svn/trunk@223 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -44,7 +44,9 @@ faq.predicate=where faq.faqid < 100000000
 throttle=0
 # The first seed url for internet crawling
 # http://www.ikokoon.eu/ikokoon/index.html
-url=http://www.oki.com/
+# http://www.oki.com/
+# http://localhost/million/adapt.html
+url=http://www.ikokoon.eu/ikokoon/index.html
 
 # Lucene properties:
 buffer.size=256
