--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -19,11 +19,12 @@ monitoring.service.path=/service/IMonitoringService?wsdl
 
 throttle=0
 # http://www.ikokoon.eu/ikokoon/index.html
-url=http://www.oki.com/
+# http://www.oki.com/
+url=http://www.ikokoon.eu/ikokoon/index.html
 jdbc.batch.size=10
 internet.batch.size=25
 table.handler.threads=3
-internet.handler.threads=25
+internet.handler.threads=5
 filesystem.handler.threads=1
 email.handler.threads=1
 files.path=./modules/core/src/test/resources/data
