git-svn-id: http://ikube.googlecode.com/svn/trunk@224 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -30,7 +30,7 @@ internet.batch.size=10
 
 # The number of threads for each indexing component
 table.handler.threads=3
-internet.handler.threads=5
+internet.handler.threads=1
 filesystem.handler.threads=1
 email.handler.threads=1
 
@@ -46,7 +46,7 @@ throttle=0
 # http://www.ikokoon.eu/ikokoon/index.html
 # http://www.oki.com/
 # http://localhost/million/adapt.html
-url=http://www.ikokoon.eu/ikokoon/index.html
+url=http://localhost/million/adapt.html
 
 # Lucene properties:
 buffer.size=256
