git-svn-id: http://ikube.googlecode.com/svn/trunk@225 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -11,9 +11,6 @@ max.age=10800000
 web.service.delay=60000
 web.service.period=60000
 
-synchronisation.delay=10000
-synchronisation.period=60000
-
 analyzed=true
 stored=true
 vectored=true
@@ -26,16 +23,16 @@ monitoring.service.path=/service/IMonitoringService?wsdl
 
 # The batch size for fetching records from the database
 jdbc.batch.size=10000
-internet.batch.size=10
+internet.batch.size=1000
 
 # The number of threads for each indexing component
 table.handler.threads=3
-internet.handler.threads=1
+internet.handler.threads=10
 filesystem.handler.threads=1
 email.handler.threads=1
 
 # The path to the files to be indexed
-files.path=./modules/core/src/test/resources/data
+files.path=D:/apache-tomcat-6.0.26
 
 # To limit the results
 faq.predicate=where faq.faqid < 100000000
