git-svn-id: http://ikube.googlecode.com/svn/trunk@237 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -3,7 +3,7 @@ delay=10000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the indexes
-max.age=10800000
+max.age=36000000
 
 # Eventually we want to set this to about 10 milliseconds and
 # verify that the open close and index actions do not interrupt
@@ -12,7 +12,7 @@ web.service.delay=60000
 web.service.period=60000
 
 analyzed=true
-stored=true
+stored=false
 vectored=true
 
 service.protocol=http
@@ -23,7 +23,7 @@ monitoring.service.path=/service/IMonitoringService?wsdl
 
 # The batch size for fetching records from the database
 jdbc.batch.size=10000
-internet.batch.size=1000
+internet.batch.size=10000
 
 # The number of threads for each indexing component
 table.handler.threads=3
@@ -48,9 +48,9 @@ url=http://localhost/million/adapt.html
 # Lucene properties:
 buffer.size=256
 compound.file=true
-merge.factor=1000
-buffered.docs=1000
-max.field.length=10000
+merge.factor=10000
+buffered.docs=10000
+max.field.length=100000
 max.read.length=1000000
 
 # The path for the index(s)
