git-svn-id: http://ikube.googlecode.com/svn/trunk@238 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -18,8 +18,8 @@ vectored=true
 service.protocol=http
 service.port=8081
 monitoring.service.port=8090
-web.service.path=/service/ISearcherWebService?wsdl
-monitoring.service.path=/service/IMonitoringService?wsdl
+web.service.path=/ikube/service/ISearcherWebService?wsdl
+monitoring.service.path=/ikube/service/IMonitoringService?wsdl
 
 # The batch size for fetching records from the database
 jdbc.batch.size=10000
@@ -43,7 +43,7 @@ throttle=0
 # http://www.ikokoon.eu/ikokoon/index.html
 # http://www.oki.com/
 # http://localhost/million/adapt.html
-url=http://localhost/million/adapt.html
+url=http://www.ikokoon.eu/ikokoon/index.html
 
 # Lucene properties:
 buffer.size=256
