--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -12,7 +12,7 @@ web.service.delay=60000
 web.service.period=60000
 
 analyzed=true
-stored=false
+stored=true
 vectored=true
 
 service.protocol=http
@@ -35,7 +35,7 @@ email.handler.threads=1
 files.path=D:/apache-tomcat-6.0.26
 
 # To limit the results
-faq.predicate=where faq.faqid < 100000000
+faq.predicate=where faq.faqid < 100000
 
 # The time delay between reads in the crawler
 throttle=0
@@ -63,8 +63,8 @@ index.directory.path.three=${index.directory.path}/three
 jdbc.minPoolSize=10
 jdbc.maxPoolSize=100
 jdbc.maxStatements=1000
-jdbc.checkOutTimeout=360000000
-jdbc.numHelperThreads=5
+jdbc.checkOutTimeout=${max.age}
+jdbc.numHelperThreads=1
 
 # DB2 database
 jdbc.name=DB2
