git-svn-id: http://ikube.googlecode.com/svn/trunk@242 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -12,7 +12,7 @@ web.service.delay=60000
 web.service.period=60000
 
 analyzed=true
-stored=true
+stored=false
 vectored=true
 
 service.protocol=http
@@ -35,7 +35,7 @@ email.handler.threads=1
 files.path=D:/apache-tomcat-6.0.26
 
 # To limit the results
-faq.predicate=where faq.faqid < 100000
+faq.predicate=where faq.faqid < 10000000
 
 # The time delay between reads in the crawler
 throttle=0
@@ -55,9 +55,6 @@ max.read.length=1000000
 
 # The path for the index(s)
 index.directory.path=./indexes
-index.directory.path.one=${index.directory.path}/one
-index.directory.path.two=${index.directory.path}/two
-index.directory.path.three=${index.directory.path}/three
 
 # General JDBC settings
 jdbc.minPoolSize=10
