--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -11,6 +11,14 @@ max.age=36000000
 web.service.delay=60000
 web.service.period=60000
 
+searcher.index.name=indexOne
+searcher.field.name=question
+searcher.fragment=true
+searcher.minimum.results.size=1
+searcher.search.string=clinch crackerjack books gall thorough going tall pissed committee greathearted cyborg devotional tremor tuba
+searcher.start.index=0
+searcher.end.index=101
+
 analyzed=true
 stored=false
 vectored=true
@@ -54,7 +62,7 @@ max.field.length=100000
 max.read.length=1000000
 
 # The path for the index(s)
-index.directory.path=./indexes
+index.directory.path=D:/Eclipse/workspace/ikube/indexes
 
 # General JDBC settings
 jdbc.minPoolSize=10
