First stable version. Release candidate 1.
git-svn-id: http://ikube.googlecode.com/svn/trunk@248 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -20,7 +20,7 @@ searcher.start.index=0
 searcher.end.index=101
 
 analyzed=true
-stored=false
+stored=true
 vectored=true
 
 service.protocol=http
@@ -43,7 +43,7 @@ email.handler.threads=1
 files.path=D:/apache-tomcat-6.0.26
 
 # To limit the results
-faq.predicate=where faq.faqid < 10000000
+faq.predicate=where faq.faqid < 100000
 
 # The time delay between reads in the crawler
 throttle=0
@@ -62,7 +62,7 @@ max.field.length=100000
 max.read.length=1000000
 
 # The path for the index(s)
-index.directory.path=D:/Eclipse/workspace/ikube/indexes
+index.directory.path=./indexes
 
 # General JDBC settings
 jdbc.minPoolSize=10
