--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -36,7 +36,7 @@ merge.factor=10
 buffered.docs=10
 max.field.length=10000
 max.read.length=10000000
-index.directory.path=./index
+index.directory.path=./indexes
 index.directory.path.one=${index.directory.path}/one
 index.directory.path.two=${index.directory.path}/two
 index.directory.path.three=${index.directory.path}/three
