--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -3,19 +3,21 @@ delay=10000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the indexes
-max.age=1800000
+max.age=7200000
 
 # Eventually we want to set this to about 10 milliseconds and
 # verify that the open close and index actions do not interrupt
 # the search operations and clients
-web.service.delay=60000
-web.service.period=60000
+web.service.delay=10000
+web.service.period=10000
 
-searcher.index.name=indexOne
-searcher.field.name=question
+searcher.index.name.one=indexOne
+searcher.index.name.two=indexTwo
+searcher.index.name.three=indexThree
+searcher.field.name=answer
 searcher.fragment=true
-searcher.minimum.results.size=1
-searcher.search.string=clinch crackerjack books gall thorough going tall pissed committee greathearted cyborg devotional tremor tuba
+searcher.minimum.results.size=10
+searcher.search.string=answer clinch crackerjack books gall thorough going tall pissed committee greathearted cyborg devotional tremor tuba
 searcher.start.index=0
 searcher.end.index=101
 
@@ -35,7 +37,7 @@ internet.batch.size=10000
 
 # The number of threads for each indexing component
 table.handler.threads=3
-internet.handler.threads=3
+internet.handler.threads=10
 filesystem.handler.threads=1
 email.handler.threads=1
 
@@ -43,7 +45,7 @@ email.handler.threads=1
 files.path=D:/apache-tomcat-6.0.26
 
 # To limit the results
-faq.predicate=where faq.faqid < 10000
+faq.predicate=where faq.faqid < 1000000
 
 # The time delay between reads in the crawler
 throttle=0
@@ -62,7 +64,7 @@ max.field.length=100000
 max.read.length=1000000
 
 # The path for the index(s)
-index.directory.path=./indexes
+index.directory.path=D:/Eclipse/workspace/ikube/indexes
 
 # General JDBC settings
 jdbc.minPoolSize=10
